--- a/BaseProject/Views/Shared/_Layout.cshtml
+++ b/BaseProject/Views/Shared/_Layout.cshtml
@@ -25,7 +25,22 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        @if (User.Identity.IsAuthenticated)
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-controller="Account" asp-action="Logout">@User.Identity.Name (Çıkış Yap)</a>
+
+                            </li>
+                        }
+                        else
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-controller="Account" asp-action="Login">Giriş Yap</a>
+
+                            </li>
+                        }
                     </ul>
+                  
                 </div>
             </div>
         </nav>
